packages/frontend/app/components/TransferModal/TransferDropdown.module.css
.transfer_dropdown {
    display: flex;
    flex-direction: column;
    /* magic number for width is specified in Figma */
    --transfer-dropdown-width: 375px;
    width: var(--transfer-dropdown-width);
    gap: var(--gap-s);
    font-size: var(--font-size-s);
    user-select: none;
}

.dropdown > button {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    /* magic number for height is specified in Figma */
    height: 32px;
    width: 100%;
    padding-left: var(--padding-s);
    padding-right: var(--padding-xs);
    background-color: var(--bg-dark4);
    border: none;
    outline: none;
    border-radius: var(--radius-s);
    color: var(--text1);
}

.dropdown > ul {
    position: absolute;
    display: flex;
    flex-direction: column;
    margin-top: 2px;
    width: var(--transfer-dropdown-width);
    gap: var(--padding-row);
    padding: var(--padding-s);
    font-size: var(--font-size-s);
    color: var(--dark2);
    list-style: none;
    border-radius: var(--radius-s);
    background-color: var(--bg-dark4);
    z-index: calc(var(--create-strategy-page-z-index) + 1);
}

.dropdown > ul > li {
    padding: var(--padding-xs);
    cursor: pointer;
    border-radius: var(--radius-xs);
    color: var(--text2);
}

.dropdown > ul > li:hover {
    background-color: var(--bg-dark3);
}

.transfer_dropdown > p {
    font-size: var(--font-size-s);
    color: var(--text2);
    user-select: none;
    text-align: justify;
}

